Added research experiences

--- a/mainSite copy.html
+++ b/mainSite copy.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/favicon.ico" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -44,7 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.webp" alt=""> -->
-        <h1 class="sitename">MinimalFolio</h1>
+        <h1 class="sitename">Gwyn Tangog</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -92,50 +92,43 @@
             <div class="intro" data-aos="fade-right" data-aos-delay="150">
               <div class="eyebrow d-inline-flex align-items-center gap-2 mb-3">
                 <span class="dot"></span>
-                <span class="text">Lorem ipsum dolor sit amet</span>
+                <!-- <span class="text">Welcome to my home page!</span> -->
+                <span class="text">諦めないのが俺の魔法だ!</span>
               </div>
 
               <h1 class="display-heading mb-3">
-                Crafting calm digital experiences with thoughtful details
+                Hi, I'm Gwyn!
               </h1>
 
               <p class="lead mb-4">
-                Integer euismod nisl vitae sapien dictum, sed tempor urna posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vivamus vel hendrerit augue.
+                Gwyneth Margaux Gutierrez Tangog (she/her) <br>
+                CS and Math @ MIT. [ADD A BRIEF BIO?]
               </p>
 
               <div class="cta-group d-flex flex-wrap align-items-center gap-3" data-aos="zoom-in" data-aos-delay="250">
-                <a href="#portfolio" class="btn btn-ghost">
-                  View Selected Work
-                  <i class="bi bi-arrow-right ms-2"></i>
-                </a>
-                <a href="#contact" class="link-underline">
-                  Get in touch
-                  <i class="bi bi-envelope ms-2"></i>
-                </a>
-              </div>
-
-              <div class="meta mt-4 d-flex flex-wrap align-items-center gap-4" data-aos="fade-up" data-aos-delay="300">
-                <div class="meta-item d-flex align-items-center gap-2">
-                  <i class="bi bi-geo-alt"></i>
-                  <span>San Francisco, CA</span>
-                </div>
-                <div class="meta-item d-flex align-items-center gap-2">
-                  <i class="bi bi-circle"></i>
-                  <span>Available for freelance</span>
-                </div>
+                <a href="#about" class="btn-ghost">
+                    View My Work <i class="bi bi-arrow-down"></i>
+                  </a>
+                  <a href="#resume" class="link-underline">
+                    Download Resume <i class="bi bi-download"></i>
+                  </a>
+                    <a href="#contact" class="link-underline">
+                    Get in touch
+                    <i class="bi bi-envelope ms-2"></i>
+                  </a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-5">
             <figure class="portrait-wrap position-relative" data-aos="fade-left" data-aos-delay="200">
-              <img src="assets/img/profile/profile-6.webp" alt="Profile Portrait" class="img-fluid portrait-img">
+              <img src="assets/img/Gwyn/Gwyn_fun_profile.jpeg" alt="Profile Portrait" class="img-fluid portrait-img">
               <figcaption class="visually-hidden">Minimal portrait preview</figcaption>
 
-              <div class="badge note" data-aos="zoom-in" data-aos-delay="300">
+              <!-- <div class="badge note" data-aos="zoom-in" data-aos-delay="300">
                 <i class="bi bi-star"></i>
                 <span>10+ yrs building elegant UIs</span>
-              </div>
+              </div> -->
             </figure>
           </div>
 
@@ -150,8 +143,10 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>About</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Research Experience</h2>
+        <p>My current research interests lie in Theoretical Computer Science, in particular counting complexity
+          and harness. Before finding this field, I did research in sustainability and data science, where I
+          primarily did data science.<p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
