add section headers for all

--- a/mainSite.html
+++ b/mainSite.html
@@ -410,6 +410,85 @@
         </div>
         <!-- T Exp 1 -->
 
+      </section>
+
+      <!-- Industry Section -->
+      <section id="about" class="about section light-background">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Industry Experience </h2>
+        <p>[INSERT STUFF ABOUT PKG]<p>
+      </div><!-- End Section Title -->
+
+       <div class="container" data-aos="fade-up" data-aos-delay="100"></div>
+
+        <!-- Skills Grid -->
+        <div class="skills-wrap">
+          <div class="row g-4">
+            <!-- EXP 2 -->
+            <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up" data-aos-delay="120">
+              <div class="skill-item">
+                <!-- <i class="bi bi-layout-text-window"></i> -->
+                <h3>Recidiviz</h3>
+                <h4>Implementation Engineer Intern</h4>
+                <h5>June 2024 - August 2024</h5>
+                <p>Vivamus sagittis lacus molestie placerat.</p>
+
+                <a href="#hero" class="btn-ghost">
+                  Read my article here!
+                </a>
+              </div>
+
+            </div>
+            <!-- EXP 2 -->
+
+            <!-- EXP 2 -->
+            <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up" data-aos-delay="180">
+              <div class="skill-item">
+                <!-- <i class="bi bi-code-slash"></i> -->
+                <h3>The Engine Room</h3>
+                <h4>Data and Tech Intern</h4>
+                <h5>January 2025</h5>
+                <p>Maecenas pharetra magna sit amet risus.</p>
+                <a href="#hero" class="btn-ghost">
+                  Read my article here!
+                </a>
+              </div>
+            </div>
+            <!-- EXP 2 -->
+
+        <!-- End Skills Grid -->
+            </div>
+        </section>
+
+
+        <!-- LEADERSHIP AND EXTRACURR -->
+      <section id="about" class="about section light-background">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Leadership and Extracurricular Experiences</h2>
+        <p>[INSERT]<p>
+      </div><!-- End Section Title -->
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+         </div>
+        </section>
+
+        <!-- AWARDS -->
+      <section id="about" class="about section light-background">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Awards</h2>
+        <p>[INSERT]<p>
+      </div><!-- End Section Title -->
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+         </div>
+        </section>
+
   </main>
 
   <footer id="footer" class="footer">
