fixed spacing issue in industry exp

--- a/mainSite.html
+++ b/mainSite.html
@@ -421,7 +421,7 @@
         <p>[INSERT STUFF ABOUT PKG]<p>
       </div><!-- End Section Title -->
 
-       <div class="container" data-aos="fade-up" data-aos-delay="100"></div>
+       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <!-- Skills Grid -->
         <div class="skills-wrap">
@@ -459,6 +459,8 @@
             <!-- EXP 2 -->
 
         <!-- End Skills Grid -->
+         </div>
+            </div>
             </div>
         </section>
 
