Add notes about leadership and extracurr

--- a/mainSite.html
+++ b/mainSite.html
@@ -467,6 +467,7 @@
 
         <!-- LEADERSHIP AND EXTRACURR -->
       <section id="about" class="about section light-background">
+        <!-- McCormick RPM, International Orientation, MURJ, MIT LIVE, Web Lab, Rainbow Lounge (?)-->
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
