added spacing notes

--- a/mainSite.html
+++ b/mainSite.html
@@ -468,6 +468,7 @@
         <!-- LEADERSHIP AND EXTRACURR -->
       <section id="about" class="about section light-background">
         <!-- McCormick RPM, International Orientation, MURJ, MIT LIVE, Web Lab, Rainbow Lounge (?)-->
+         <!-- make it 3 per row with pictures on top -->
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -480,6 +481,7 @@
         </section>
 
         <!-- AWARDS -->
+         <!-- 1 per row with pictures on sides -->
       <section id="about" class="about section light-background">
 
       <!-- Section Title -->
