Added descriptions to awards section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - MinimalFolio Bootstrap Template</title>
+  <title>Gwyn Tangog</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -640,7 +640,7 @@
         <div class="skills-wrap">
           <div class="row g-4">
             <!-- EXP 1 -->
-            <div class="col-12 col-md-12 col-lg-12" data-aos="fade-up" data-aos-delay="120">
+            <div class="col-6 col-md-12 col-lg-12" data-aos="fade-up" data-aos-delay="120">
               <div class="skill-item">
                 <h3>Outstanding UROP Student Award</h3>
                 <h4>MIT McCormick Hall</h4>
@@ -653,6 +653,7 @@
                   Read my article here!
                 </a>
               </div>
+               </div>
 
             </div>
             <!-- EXP 1 -->
