fixed navbar links

--- a/index.html
+++ b/index.html
@@ -50,28 +50,11 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#resume">Resume</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#services">Services</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
-            </ul>
-          </li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#researchExperience">Research Experience</a></li>
+          <li><a href="#teachingExperience">Teaching Experience</a></li>
+          <li><a href="#industryExperience">Industry Experience</a></li>
+          <li><a href="#leadership">Leadership and Extracurriculars</a></li>
+          <li><a href="#awards">Awards</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -331,7 +314,7 @@
     </section><!-- /Resume Section -->
 
     <!-- About Section -->
-    <section id="about" class="about section light-background">
+    <section id="teachingExperience" class="about section light-background">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -408,7 +391,7 @@
       </section>
 
       <!-- Industry Section -->
-      <section id="about" class="about section light-background">
+      <section id="industryExperience" class="about section light-background">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -470,7 +453,7 @@
 
 
         <!-- LEADERSHIP AND EXTRACURR -->
-      <section id="about" class="about section light-background">
+      <section id="leadership" class="about section light-background">
         <!-- McCormick RPM, International Orientation, MURJ, MIT LIVE, Web Lab, Rainbow Lounge (?)-->
          <!-- make it 3 per row with pictures on top -->
 
@@ -625,7 +608,7 @@
 
         <!-- AWARDS -->
          <!-- 1 per row with pictures on sides -->
-      <section id="about" class="about section light-background">
+      <section id="awards" class="about section light-background">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
