Added linked in and fixed copyrights

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                   <a href="https://docs.google.com/document/d/1hZA8V64-U8PurruyyQC_DF6iZh3p0cabvp46Ix3UR6g/edit?usp=sharing" class="link-underline">
                     Download Resume <i class="bi bi-download"></i>
                   </a>
+                  <a href="https://www.linkedin.com/in/gwyneth-margaux-tangog-501b7b241/"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -469,9 +470,9 @@
             <!-- EXP 1 -->
             <div class="col-6 col-md-4 col-lg-4" data-aos="fade-up" data-aos-delay="120">
               <div class="skill-item">
-              <figure class="portrait-wrap position-relative" data-aos="fade-left" data-aos-delay="200">
+              <figure class="profile-figure portrait-wrap position-relative" data-aos="fade-left" data-aos-delay="200">
               <img src="assets/img/Gwyn/RPM Outing.jpeg" alt="Profile Portrait" class="img-fluid portrait-img">
-              <figcaption class="visually-hidden">Minimal portrait preview</figcaption>
+              <figcaption class="profile-caption visually-hidden">Minimal portrait preview</figcaption>
               </figure>
                 <h3>Resident Peer Mentor (RPM)</h3>
                 <h4>MIT McCormick Hall</h4>
@@ -668,14 +669,14 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">MinimalFolio</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Gwyn Tangog</strong> <span>All Rights Reserved</span></p>
       </div>
-      <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
+      <!-- <div class="social-links d-flex justify-content-center"> -->
+        <!-- <a href=""><i class="bi bi-twitter-x"></i></a>
         <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
-      </div>
+        <a href=""><i class="bi bi-instagram"></i></a> -->
+        <!-- <a href="https://www.linkedin.com/in/gwyneth-margaux-tangog-501b7b241/"><i class="bi bi-linkedin"></i></a>
+      </div> -->
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
