Fixed dates and added paper link

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                   <div class="period">June 2024 - August 2024</div>
                 </div>
                 <div class="item-content">
-                  <p> Wrote related literature revie and performed data modelling and graphing using Python.
+                  <p> Wrote related literature review and performed data modelling and graphing using Python. See the paper <a href="https://www.sciencedirect.com/science/article/abs/pii/S0921344925003556">here!</a>
                   </p>
                 </div>
               </div>
@@ -386,6 +386,39 @@
             </div>
           </div>
 
+        </div>
+        <!-- T Exp 1 -->
+
+
+        <!-- T Exp 1 -->
+        <div class="row align-items-center justify-content-between intro-wrap gy-5">
+          <div class="col-lg-7" data-aos="fade-right" data-aos-delay="150">
+            <div class="intro-content">
+              <span class="eyebrow">August 2024 - Current</span>
+              <h3 class="headline">MIT Math for Computer Science (6.1200) TA</h3>
+              <p class="lead">
+                As a TA, I run a recitation section of 10-20 students where I prove concept reviews and space
+                for problem-solving and receiving feedback. In my first semester as a TA, I took the initiative
+                to start hosting review sessions for students before midterms.
+              </p>
+
+              <div class="cta-group">
+                <a href="https://www.youtube.com/watch?v=djMiglg9qqw" class="btn-ghost">
+                  Watch me host a review session here!
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="250">
+            <figure class="profile-figure text-center text-lg-end">
+              <img src="assets/img/Gwyn/612Teaching.jpeg" alt="Portrait of Alex" class="img-fluid profile-photo">
+              <figcaption class="profile-caption d-flex justify-content-end">
+                A screenshot of myself on Panopto video, holding a review session for this class
+                during Spring 2025.
+              </figcaption>
+            </figure>
+          </div>
         </div>
         <!-- T Exp 1 -->
 
@@ -534,7 +567,7 @@
               </figure>
                 <h3>Writer, Research Editor, Web Master</h3>
                 <h4>MIT Undergraduate Research Journal (MURJ)</h4>
-                <h5>February 2023 - May 2025</h5>
+                <h5>February 2023 - December 2024</h5>
                 <p>As a research editor, I reviewed articles to be published in MURJ.
                   For the Spring 2023 issue, I interviewed professors at MIT about the
                   math major: Professors Gilbert Strang, Larry Guth, and Jermy Hahn.
@@ -568,7 +601,7 @@
               </figure>
                 <h3>Band Lead and Member</h3>
                 <h4>MIT Live Band</h4>
-                <h5>August 2024 - Current</h5>
+                <h5>February 2023 - May 2023</h5>
                 <p>A performed in two bands. I was the band lead for the group performing a cover of
                   Ghost of You by 5 Seconds of Summer where I played the guitar and sang. I was a member
                   in another group as a singer where we performed Message in a Bottle by The Police.
