added research poster links

--- a/index.html
+++ b/index.html
@@ -233,7 +233,8 @@
                 </div>
                 <div class="item-content">
                   <p>I analyzed data from several concrete companies using gamification to measure its impacts on driver productivity,
-                    retention, and recruitment using Python. I made a research poster and presented it to industry stakeholders.
+                    retention, and recruitment using Python. I made a research poster and presented it to industry stakeholders. See
+                    the research poster <a href="https://drive.google.com/file/d/1RqNX0FYlklpnejkK-74roY5JqA5cg5Tj/view?usp=drive_link">here!</a>
                   </p>
                 </div>
               </div>
@@ -247,7 +248,8 @@
                 </div>
                 <div class="item-content">
                   <p>I Performed data cleaning and modeling to analyze the amount of carbon uptake in a specific cement stockpile yard.
-                    I made a research poster and presented results to industry stakeholders.
+                    I made a research poster and presented results to industry stakeholders. See the research poster
+                    <a href="https://drive.google.com/file/d/1OfOODrRrusjJKFxdST8uftOiSRQCJJMI/view?usp=drive_link">here!</a>
                   </p>
                 </div>
               </div>
