added graph induction resource

--- a/index.html
+++ b/index.html
@@ -343,6 +343,12 @@
                   Watch me host a review session here!
                 </a>
               </div>
+
+              <div class="cta-group">
+                <a href="https://drive.google.com/file/d/1jbBQr2m9Osr5OdM72qlwfxIregugqTeb/view?usp=sharing" class="btn-ghost">
+                  Read a fun graph induction resource I wrote here!
+                </a>
+              </div>
             </div>
           </div>
 
