added planned courses

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <li><a href="#industryExperience">Industry Experience</a></li>
           <li><a href="#leadership">Leadership and Extracurriculars</a></li>
           <li><a href="#awards">Awards</a></li>
+          <li><a href="#coursesMIT">Courses Taken at MIT</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -670,6 +671,64 @@
              </div>
          </div>
         </section>
+
+
+       <section id="coursesMIT" class="about section light-background">
+             <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Courses Taken at MIT</h2>
+      </div><!-- End Section Title -->
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <!-- T Exp 1 -->
+        <div class="row align-items-center justify-content-between intro-wrap gy-5">
+          <div class="col-lg-7" data-aos="fade-right" data-aos-delay="150">
+            <div class="intro-content">
+              <h4><u>Theoretical Computer Science</u></h4>
+                <ul class="strongList">
+                  <li>6.1200: Math for Computer Science</li>
+                  <li>6.1210: Introduction to Algorithms</li>
+                  <li>6.1220: Design and Analysis of Algorithms</li>
+                  <li>6.5350: Matrix Multiplication and Graph Algorithms</li>
+                  <li>18.404: Theory of Computation</li>
+                  <li>18.434: Seminar in Theoretical Computer Science</li>
+                  <li>18.405: Advanced Complexity Theory*</li>
+                </ul>
+              <h4><u>AI and Machine Learning</u></h4>
+                <ul class="strongList">
+                  <li>6.3900: Introduction to Machine Learning</li>
+                  <li>6.8301: Advances in Computer Vision</li>
+                </ul>
+              <h4><u>Programming and Software Engineering</u></h4>
+                <ul class="strongList">
+                  <li>6.100A: Introduction to CS and Programming in Python</li>
+                  <li>6.100B: Introduction to Computational Thinking and Data Science</li>
+                  <li>6.1010: Fundamentals of Programming</li>
+                  <li>6.1020: Software Construction</li>
+                </ul>
+              <h4><u>Computer Systems and Architecture</u></h4>
+                <ul class="strongList">
+                  <li>6.1904: Introduction to Programming in C and Assembly</li>
+                  <li>6.1910: Computation Structures</li>
+                  <li>6.1800: Computer Systems and Engineering*</li>
+                </ul>
+              <h4><u>Other Mathematics</u></h4>
+                <ul class="strongList">
+                  <li>18.02: Multivariable Calculus</li>
+                  <li>18.03: Differential Equations</li>
+                  <li>18.06: Linear Algebra</li>
+                  <li>18.600: Probability and Random Variables</li>
+                  <li>18.510: Introduction to Mathemagical Logic and Set Theory*</li>
+                  <li>18.781: Theory of Numbers*</li>
+                </ul>
+
+              <p>*Classes planned for the coming semester (Spring 2026)</p>
+            </div>
+          </div>
+        </div>
+        <!-- T Exp 1 -->
+      </section>
 
   </main>
 
